Ajout token lien de validation du compte par email

--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ DATABASE_URL=mysql://root@localhost:3306/e_commerce_sneaker?serverVersion=8.0.31
 
 ###> symfony/mailer ###
 # Configuration de l'envoi de mails via SMTP
-MAILER_DSN=smtp://smtp.mailtrap.io:587?encryption=tls&auth_mode=login&username=your_username&password=your_password
+MAILER_DSN=smtp://3226a60245319f:2c8312752ca066@sandbox.smtp.mailtrap.io:2525
 ###< symfony/mailer ###
 
 
@@ -37,3 +37,5 @@ MAILER_DSN=smtp://smtp.mailtrap.io:587?encryption=tls&auth_mode=login&username=y
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
+
+JWT_SECRET='0hla83lleBroue11e!'
